traceId 검증 조건 StringUtils 적용